--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>test-git</title>
 </head>
 <body>
+    <header>
+        <nav class="nav-list">
+            <li>
+                <a href="">contacter</a>
+            </li>
+            <li>
+                <a href="">Connexion/inscription</a>
+            </li>
+            <li>
+                <a href="">Nos jet ski</a>
+            </li>
+        </nav>
+
+        <form class="row">
+
+            <input type="date" placeholder="Debut">
+            <input type="date" placeholder="Date de Fin">
+            <input type="text" placeholder="lieu">
+            <input type="text">
+
+        </form>
+
+
+
+    </header>
     
+
 </body>
 </html>
