--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 
     </header>
     <main>
+<div>
+<img src="./images/jet ski 1.png"  id ="image"alt="">
+<button type ="text" id="change">Changer image</button>
 
-
+</div >
 
 
 
